--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title></title>
 		<script type='text/javascript'>
-			
+			window.location.href="https://segmentfault.com/u/webxejir";
 		</script>
 	</head>
 	<body>
