--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
+		<meta name="robots" content="noindex, nofollow">
 		<script type='text/javascript'>
 			window.location.href="http://grdy.eu.org";
 		</script>
