--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<title></title>
 		<meta name="robots" content="noindex, nofollow">
 		<script type='text/javascript'>
-			window.location.href="http://grdy.eu.org";
+			window.onload = function() {
+				window.location.href="http://grdy.eu.org";
+			};
 		</script>
 	</head>
 	<body>
