--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		</script>
 	</head>
 	<body>
-												
+	<div style='color:#ffffff;opacity: 0;'>HOLLE WORLD！</div>										
 	</body>	
 </html>
 
